--- a/build.gradle
+++ b/build.gradle
@@ -2,6 +2,7 @@ plugins {
     id 'java-library'
     id "org.jetbrains.kotlin.jvm" version "1.3.61"
     id 'maven-publish'
+    id 'org.openjfx.javafxplugin' version '0.0.8'
 }
 
 group 'ch.bildspur'
@@ -17,12 +18,26 @@ wrapper {
 
 repositories {
     mavenCentral()
+    maven { url 'https://jitpack.io' }
+}
+
+javafx {
+    version = "11"
+    modules = [ 'javafx.controls', 'javafx.fxml' ]
 }
 
 dependencies {
     testCompile group: 'junit', name: 'junit', version: '4.12'
 
     implementation "org.jetbrains.kotlin:kotlin-stdlib-jdk8"
+
+    // base
+    implementation "com.github.cansik:bildspur-base:${version}"
+
+    // javafx
+    compile group: 'org.openjfx', name: 'javafx-base', version: '11.0.2'
+    compile group: 'org.openjfx', name: 'javafx-controls', version: '11.0.2'
+    compile group: 'org.controlsfx', name: 'controlsfx', version: '11.0.0'
 }
 
 configurations {
