--- a/.travis.yml
+++ b/.travis.yml
@@ -3,12 +3,7 @@ notifications:
   email: false
 language: java
 jdk:
-  - oraclejdk8
-
-addons:
-  apt:
-    packages:
-      - oracle-java8-installer
+  - openjdk11
 
 # command to build
 install:
