--- a/build.gradle
+++ b/build.gradle
@@ -32,16 +32,16 @@ dependencies {
     implementation "org.jetbrains.kotlin:kotlin-stdlib-jdk8"
 
     // base
-    implementation "com.github.cansik:bildspur-base:0.2.0"
+    compile "com.github.cansik:bildspur-base:0.2.5"
 
     // javafx
-    implementation group: 'org.openjfx', name: 'javafx-base', version: '11.0.2'
-    implementation group: 'org.openjfx', name: 'javafx-controls', version: '11.0.2'
-    implementation group: 'org.controlsfx', name: 'controlsfx', version: '11.0.0'
+    compile group: 'org.openjfx', name: 'javafx-base', version: '11.0.2'
+    compile group: 'org.openjfx', name: 'javafx-controls', version: '11.0.2'
+    compile group: 'org.controlsfx', name: 'controlsfx', version: '11.0.0'
 
-    // are they really needed?
-    testCompile 'com.google.code.gson:gson:2.8.6'
-    testCompile 'com.github.salomonbrys.kotson:kotson:2.5.0'
+    // json
+    compile 'com.google.code.gson:gson:2.8.6'
+    compile 'com.github.salomonbrys.kotson:kotson:2.5.0'
 }
 
 configurations {
