--- a/build.gradle
+++ b/build.gradle
@@ -1,6 +1,6 @@
 plugins {
     id 'java-library'
-    id "org.jetbrains.kotlin.jvm" version "1.3.61"
+    id "org.jetbrains.kotlin.jvm" version "1.3.72"
     id 'maven-publish'
     id 'org.openjfx.javafxplugin' version '0.0.8'
 }
@@ -8,13 +8,8 @@ plugins {
 group 'ch.bildspur'
 version '0.3.0'
 
-def String name = 'bildspur-ui'
+def name = 'bildspur-ui'
 sourceCompatibility = 1.8
-
-wrapper {
-    gradleVersion = '5.6.4'
-    distributionUrl = 'https://services.gradle.org/distributions/gradle-$gradleVersion-all.zip'
-}
 
 repositories {
     mavenCentral()
@@ -30,6 +25,8 @@ dependencies {
     testCompile group: 'junit', name: 'junit', version: '4.12'
 
     implementation "org.jetbrains.kotlin:kotlin-stdlib-jdk8"
+    runtime group: 'org.jetbrains.kotlin', name: 'kotlin-reflect', version: '1.3.72'
+
 
     // base
     compile "com.github.cansik:bildspur-base:0.2.5"
