--- a/build.gradle
+++ b/build.gradle
@@ -1,8 +1,8 @@
 plugins {
     id 'java-library'
-    id "org.jetbrains.kotlin.jvm" version "1.4.31"
+    id "org.jetbrains.kotlin.jvm" version "1.6.10"
     id 'maven-publish'
-    id 'org.openjfx.javafxplugin' version '0.0.9'
+    id 'org.openjfx.javafxplugin' version '0.0.12'
 }
 
 group 'ch.bildspur'
@@ -22,23 +22,23 @@ javafx {
 }
 
 dependencies {
-    testCompile group: 'junit', name: 'junit', version: '4.12'
+    testImplementation group: 'junit', name: 'junit', version: '4.12'
 
     implementation "org.jetbrains.kotlin:kotlin-stdlib-jdk8"
-    runtime group: 'org.jetbrains.kotlin', name: 'kotlin-reflect', version: '1.3.72'
+    implementation group: 'org.jetbrains.kotlin', name: 'kotlin-reflect', version: '1.3.72'
 
 
     // base
-    compile "com.github.cansik:bildspur-base:0.3.5"
+    implementation "com.github.cansik:bildspur-base:0.3.5"
 
     // javafx
-    compile group: 'org.openjfx', name: 'javafx-base', version: '11.0.2'
-    compile group: 'org.openjfx', name: 'javafx-controls', version: '11.0.2'
-    compile group: 'org.controlsfx', name: 'controlsfx', version: '11.0.0'
+    implementation group: 'org.openjfx', name: 'javafx-base', version: '11.0.2'
+    implementation group: 'org.openjfx', name: 'javafx-controls', version: '11.0.2'
+    implementation group: 'org.controlsfx', name: 'controlsfx', version: '11.0.0'
 
     // json
-    compile 'com.google.code.gson:gson:2.8.6'
-    compile 'com.github.salomonbrys.kotson:kotson:2.5.0'
+    implementation 'com.google.code.gson:gson:2.9.0'
+    implementation 'com.github.salomonbrys.kotson:kotson:2.5.0'
 }
 
 configurations {
